Fixes alignment of section headers on mobile

--- a/1.0.0/validation/html/_static/custom_style.css
+++ b/1.0.0/validation/html/_static/custom_style.css
@@ -4,6 +4,10 @@ body {
     text-align: justify;
 }
 
+h1, h2, h3, h4{
+    text-align: left;
+}
+
 .bs-sidenav {
     text-align: left;
     margin-top: 50px;
